# agent-port

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
agent_port/: __init__.py  agent_router.py  app.py  cli.py  codex.py  codex_runner.py  config.py  discord_bot.py  discord_bridge.py  discord_io.py  env.py  env_utils.py  registry.py  router.py  workspace_config.py  workspace_loader.py  workspace_registry.py  workspaces.py
agent_port/agents/: __init__.py  base.py
config/: workspaces.json.example
docs/: specs.md  usage.md
docs/specs/: architecture.md  flow.md  overview.md
tests/: test_agent_router.py  test_app.py  test_cli.py  test_codex.py  test_codex_runner.py  test_config.py  test_discord_bot.py  test_discord_bridge.py  test_dotenv.py  test_main.py  test_router.py  test_workspace_registry.py  test_workspaces.py
